fix: img file path

--- a/templates/trace2office365.html
+++ b/templates/trace2office365.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
 <h3>Traceroute Result</h3>
-<img src="{{ file_name }}.png"  alt="fig">
+<img src="/static/{{ file_name }}.png"  alt="fig">
 {% endblock %}
 
